--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vətəndaş Qəbulu Poster</title>
+    <title>Deputat Poster Generatoru | Naxçıvan Muxtar Respublikasının Ali Məclisi</title>
 
     <!-- Poppins fontu -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
